Correction header html et css version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,13 @@ header {
     font-size: 16px;
 }
 
-/* .nav-menu-item-activities {
+.nav-menu-item-activities {
     border-top: 2px solid var(--main-color);
     width: 100%;
     padding-top: 16px;
     font-size: 16px;
     border-top: none;
-} */
+}
 
 ul {
     display: flex;
@@ -341,14 +341,18 @@ footer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(33%, 3fr));
     margin-top: 65px;
-    padding-left: 20px;
+    /* padding-left: 20px; */
 }
 
 .about-menu, .accommodations-menu, .help-menu {
     display: grid;
     grid-template-rows: repeat(auto-fit, 3fr);
-    padding-left: 0px;
+    padding-left: 20px;
     gap: 15px;
+}
+
+footer h3 {
+    padding-left: 20px;
 }
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
@@ -448,16 +452,11 @@ footer {
         border-top: none;
     }
 
-    .nav-menu-item-accommodations {
-        display: flex;
-        width: 50%;
-    }
-
-    .nav-menu-item-activities {
+    .nav-menu-item-activities a {
         display: flex;
         border-bottom: 2px solid var(--main-bg-color);
         padding-bottom: 14px;
-        width: 50%;
+        width: 100%;
     }
 
     .search-infos, .filter-field, .info-section, .accommodations {
